# openvpn-proxy

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.inc  Dockerfile.sockd  README.md  build-inc.sh  build.sh  docker-compose.yml  multi-arch-manifest.yaml
example/: docker-compose.yml
hooks/: build
server/: Dockerfile  go.mod  main.go
server/actions/: vpn_down.go  vpn_up.go
server/common/: model.go
server/config/: manager.go
server/core/: db.go  default_module.go  main.go  module.go
server/daemon/: config.go  openvpn.go  vpn.go  vpn_up_down.go  webserver.go
server/execmodes/vpn_action/: vpn_down.go  vpn_up.go
server/execmodes/webserver/: webserver.go
server/modules/http_proxy/: config.go  main.go  server.go
server/modules/openvpn/: db.go  main.go  server.go
server/modules/socks_proxy/: config.go  main.go  server.go
server/ovpn/: db.go
server/src/: .clang-format  CMakeLists.txt  Makefile  main.cpp  mongoose.hxx  openvpn-proxy  server.pem  tiny-json.hxx
server/static/: index.html
server/static/config/: edit-server.js
server/static/utils/: basic-input.js  component-load.js  dynamic-form.js  enum-input.js  list-editor.js  location-map.js
server/ui/: index.html
server/utils/: arg_parse.go  exec.go  file.go  log.go  network.go  type.go
server/webserver/: webserver.go
test/: commands.sh  run.sh  vpn-down  vpn-up
usr/local/etc/: sockd.conf  tinyproxy.conf
